--- a/index.html
+++ b/index.html
@@ -83,12 +83,24 @@
             margin-top: -40px;
         width: 30px;
         border: 1px solid brown;
+            background: brown;
+           z-index: 10;
         height: 120px;    
         }
+        .title h1{
+           color: red;
+            margin: 0 auto;
+            }
+        .author {
+           
+            }
     </style>
 </head>
 
 <body>
+    <div class="title">
+    <h1>Merry Christmas</h1>
+    </div>
     <!--Christmas Tree Start-->
     <div class="tree">
     <div class="body">
@@ -106,5 +118,6 @@
             <div class="trunk"></div>
             </div>
     <!--Christmas Tree End--> 
+    <p class="author">  ---- Deepak Kumar Jain</p>
 </body>
 </html>
